@@ -2,6 +2,8 @@ Changes
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -17,12 +19,12 @@ META.yml
 Process.pm
 README
 SIGNATURE
-t/Memory-Process/00-use.t
-t/Memory-Process/01-version.t
-t/Memory-Process/02-pod_coverage.t
-t/Memory-Process/03-pod.t
-t/Memory-Process/04-new.t
-t/Memory-Process/05-dump.t
-t/Memory-Process/06-record.t
-t/Memory-Process/07-report.t
-t/Memory-Process/08-state.t
+t/Memory-Process/01-use.t
+t/Memory-Process/02-version.t
+t/Memory-Process/03-new.t
+t/Memory-Process/04-dump.t
+t/Memory-Process/05-record.t
+t/Memory-Process/06-report.t
+t/Memory-Process/07-state.t
+xt/Memory-Process/01-pod_coverage.t
+xt/Memory-Process/02-pod.t
