@@ -8,6 +8,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SEE ALSO section in doc.
  - Improve report() method return values.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
  - Update copyright years in LICENSE file.
 
